.opsera-chatbot/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-chatbot-dev
  labels:
    name: opsera-chatbot-dev
    tenant: opsera
    app: chatbot
    environment: dev
