.opsera-chatbot/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot
  namespace: opsera-chatbot-dev
  labels:
    app: chatbot
    tenant: opsera
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: chatbot
